--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,13 +7,19 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF3333</color>
 
     <color name="colorAccent">#00A8FF</color>
+
     <color name="light_blue">#E9F2FF</color>
-    <color name="semi_light_blue">#F0FAFF</color>
+
     <color name="gray">#D9D9D9</color>
     <color name="black_gray">#8B8B8B</color>
-    <color name="semi_gray">#86909C</color>
     <color name="natural_navy">#051B44</color>
+
+    <color name="semi_gray">#86909C</color>
+    <color name="semi_light_blue">#F0FAFF</color>
     <color name="semi_black">#404040</color>
+
+
 </resources>
