UPDATE : 시간표 화면 수정

--- a/app/src/main/res/drawable/ic_calendar.xml
+++ b/app/src/main/res/drawable/ic_calendar.xml
@@ -1,55 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="16dp"
-    android:height="16dp"
-    android:viewportWidth="16"
-    android:viewportHeight="16">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M5.333,1.333V3.333"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#051B44"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M10.667,1.333V3.333"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#051B44"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M2.333,6.06H13.667"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#051B44"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M14,5.667V11.333C14,13.333 13,14.667 10.667,14.667H5.333C3,14.667 2,13.333 2,11.333V5.667C2,3.667 3,2.333 5.333,2.333H10.667C13,2.333 14,3.667 14,5.667Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#051B44"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M7.997,9.133H8.003"
+      android:pathData="M21,11.5V8.8C21,7.12 21,6.28 20.673,5.638C20.385,5.074 19.927,4.615 19.362,4.327C18.72,4 17.88,4 16.2,4H7.8C6.12,4 5.28,4 4.638,4.327C4.074,4.615 3.615,5.074 3.327,5.638C3,6.28 3,7.12 3,8.8V17.2C3,18.88 3,19.72 3.327,20.362C3.615,20.927 4.074,21.385 4.638,21.673C5.28,22 6.12,22 7.8,22H12.5M21,10H3M16,2V6M8,2V6M18,21V15M15,18H21"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#051B44"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M5.529,9.133H5.535"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#051B44"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M5.529,11.133H5.535"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#051B44"
+      android:strokeColor="#444444"
       android:strokeLineCap="round"/>
 </vector>
