--- a/app/src/main/res/layout/spinner_custom_item.xml
+++ b/app/src/main/res/layout/spinner_custom_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:text="1"
     android:textSize="16sp"
-    android:textColor="@color/black_gray"
+    android:textColor="@color/natural_navy"
     android:fontFamily="@font/noto_sans_kr_regular"
     android:includeFontPadding="false"
     android:gravity="left"/>
