UPDATE : 바텀 네비게이션 예약 버튼 -> 실습실 버튼으로 변경

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -16,10 +16,10 @@
         />
 
     <item
-        android:id="@+id/menu_reserv"
+        android:id="@+id/menu_lab"
         android:enabled = "true"
-        android:icon="@drawable/ic_reservation"
-        android:title="예약"
+        android:icon="@drawable/ic_monitor"
+        android:title="실습실"
         />
 
     <item
